...
        }}
      >
        <Text
          accessibilityRole="header"
          style={{ color: c.text, fontWeight: "600", fontSize: 18 }}
        >
          Badge Details
        </Text>
        <View style={{ position: "absolute", right: 8, top: 0 }}>
          <Touch
            accessibilityRole="button"
            accessibilityLabel="Close badge details"
            onPress={close}
            style={{
              width: 44,
              height: 44,
              alignItems: "center",
              justifyContent: "center",
...
