appId: so.tracking.app
---
- launchApp:
    stopApp: false
- extendedWaitUntil:
    visible: Home
    timeout: 120000
- openLink: trackingso://notifications
- extendedWaitUntil:
    visible: Notifications
    timeout: 10000
- assertVisible: "@sam added a photo to 🏃 Running 📸"
- takeScreenshot: photo-notification-inbox
- waitForAnimationToEnd:
    timeout: 3000
- tapOn: Mark as read
- assertNotVisible: Mark as read
- tapOn: Back
- assertVisible: Home
